--- a/css/profile/profile_image.css
+++ b/css/profile/profile_image.css
@@ -1,37 +1,49 @@
+/* profile_image.css */
+
+.logo-overlay,
+.banner-overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-size: 18px;
+}
+
 .logo-image {
-  position: absolute;
-  top: 280px; /* Adjust the top position as needed */
-  left: 80px; /* Adjust the left position as needed */
-  z-index: 2; /* Ensure the logo appears above other elements */
-  width: 150px;
-  height: 150px;
-  background-color: #ffffff; /* Set the background color */
-  border-radius: 50%; /* Apply a circular shape to the logo */
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2); /* Add a shadow effect */
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
 }
 
 .banner-image {
-  max-width: 100%;
-  height: auto;
-  margin-bottom: 15px;
-  position: relative; /* Add relative positioning to the banner */
-  z-index: 1; /* Ensure the banner appears below the logo */
-  background-color: transparent; /* Set the background color */
-  box-shadow: 0 0px 0px rgba(0, 0, 0, 0.2); /* Add a shadow effect */
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
 
-.user-details {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
+.logo-overlay:hover,
+.banner-overlay:hover {
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .username {
-  margin-bottom: 10px;
+  margin-top: 20px;
+  text-align: center;
 }
 
-.follow-count a {
-  margin-right: 10px;
+.follow-count {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.hashtag {
+  cursor: pointer;
+  color: blue;
+  text-decoration: underline;
+}
+
+.hashtag-count {
+  font-size: 12px;
+  margin-left: 5px;
 }
